--- a/css/style.css
+++ b/css/style.css
@@ -819,6 +819,10 @@ main {
     text-align: center;
   }
 }
+img {
+  image-rendering: optimizeSpeed !important;
+}
+
 @media only screen and (min-width: 1900px) {
   #about img {
     -o-object-fit: cover !important;
