--- a/style.scss
+++ b/style.scss
@@ -250,6 +250,10 @@ main {
   }
 }
 
+img {
+  image-rendering: optimizeSpeed !important;
+}
+
 @media only screen and (min-width: 1900px) {
   #about {
     img {
