--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@ header {
   width: 100%;
   height: 100vh;
   position: relative;
-  background-image: url("https://images.unsplash.com/photo-1601934025804-c631e2777f26?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1740&q=80");
+  background-image: url("../assets/images/background.webp");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
